k8s/mynw/base/web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nw-web
  labels:
    app.openshift.io/runtime: eap
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: nw-web
  template:
    metadata:
      labels:
        deployment: nw-web
    spec:
      containers:
      - image: northwind-app
        name: nw-web
        ports:
          - containerPort: 8080
