k8s/mynw/base/web/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nw-web
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    deployment: nw-web
